# geometric-consciousness-theory

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CODEBASE_STRUCTURE.md  GCT_Physics_Engine_Reference.md  Geometric_Consciousness_Theory.md  LICENSE  LICENSE-CONTENT  NOTICE.md  README.md  extract_figures.sh  generate_detailed_figures.py
GCT_Physics_Engine/: Makefile  README.md  build_app_r.py  build_falsifiability_matrix.py  consciousness_engine_index.md  falsifiability_registry.json  pyproject.toml  reproduce_standard_model.py  requirements.txt
GCT_Physics_Engine/config/: claim_registry.json  falsification_thresholds.json  gct_constants.yaml
GCT_Physics_Engine/data/: aps_index_proof_results.json  fk_scaling.json  mckay_e8_report.json  o14d_advanced_invariants_results.json  o14d_closure_search_results.json  o14d_irrep_decomp_results.json  protocol_absolute_scale_results.json  protocol_akn_decorated_stars_results.json  protocol_akn_dimension_group_results.json  protocol_akn_vertex_stars_results.json  protocol_alpha_1loop_results.json  protocol_alpha_derivation_results.json  protocol_alpha_residual_decomposition_results.json  protocol_anomaly_check_results.json  protocol_aps_cage_search_results.json  protocol_aps_candidates_final_results.json  protocol_aps_index_proof_results.json  protocol_b1_quality_space_irreps_results.json  protocol_bellissard_gap_labels_results.json  protocol_binet_identity_arithmetic_check_results.json  protocol_cage_blast_radius_results.json  protocol_cage_discovery_results.json  protocol_cage_minimization_results.json  (+117 more)
(+418 files in other folders)
